修复网页标题

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex,nofollow,noarchive,nosnippet,noimageindex" />
     <meta name="googlebot" content="noindex,nofollow,noarchive,nosnippet,noimageindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>金岩高新百名英才档案管理</title>
   </head>
   <body>
     <div id="root"></div>
